Theme: Fix text overlap in parallelograms when font is small
This uses pixels to set a padding because the positioning is done in pixels, so the overlap is static pixels, not related to the font size.

Fixes #73

--- a/themes/wporg-5ftf/css/utilities/_columns.scss
+++ b/themes/wporg-5ftf/css/utilities/_columns.scss
@@ -25,13 +25,14 @@
 				top: 40px;
 				left: 30px;
 				z-index: 2;
+				padding-right: 90px; // parallelograms overlap by about 70px, plus 20px for breathing space.
 			}
 
 			&:last-child {
 				position: relative;
 				z-index: 1;
 				right: 30px;
-				padding-left: 4rem;
+				padding-left: 90px; // see above.
 			}
 
 			&:before {
